# stellar-kraal-contract

./: Cargo.toml  README.md
contracts/carbon_marketplace/: Cargo.toml
contracts/carbon_marketplace/proptest-regressions/: tests.txt
contracts/carbon_marketplace/src/: lib.rs  tests.rs
contracts/carbon_marketplace/test_snapshots/tests/: test_cancel_already_sold_listing_fails.1.json  test_cancel_listing_happy_path.1.json  test_circuit_breaker_freezes_and_resets_without_losing_listing_state.1.json  test_create_listing_happy_path.1.json  test_create_listing_toctou_stale_project_status.1.json  test_create_listing_zero_amount_fails.1.json  test_initialize_succeeds.1.json  test_mint_project_credits_auth_order.1.json  test_mitigation_create_listing_unique_ids_same_ledger.1.json  test_mitigation_purchase_listing_expired_rejected.1.json  test_mitigation_purchase_listing_unbounded_max_ledger.1.json  test_poc_create_listing_different_prices_unique_ids.1.json  test_poc_create_listing_id_collision_same_ledger.1.json  test_poc_purchase_listing_no_expiry.1.json  test_prop_credits_conserved_across_transfer.1.json  test_prop_listing_always_sold_after_purchase.1.json  test_purchase_listing_check_effects_violation.1.json  test_purchase_listing_happy_path.1.json  test_purchase_nonexistent_listing_fails.1.json  test_purchase_underpayment_fails.1.json  test_stale_price_feed_rejects_price_dependent_listing_creation.1.json
contracts/carbon_registry/: Cargo.toml
contracts/carbon_registry/src/: lib.rs  migration.rs  tests.rs
contracts/carbon_registry/tests/: migration_integration.rs
(+129 files in other folders)
