[workspace]
resolver = "2"
members = [
    "contracts/stellarkraal",
    "contracts/carbon_oracle",
    "contracts/carbon_registry",
    "contracts/carbon_credit",
    "contracts/carbon_marketplace",
    "contracts/carbon_timelock",
]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
