[package]
name = "carbon-marketplace"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "22.0.0", features = ["alloc"] }

[dev-dependencies]
soroban-sdk  = { version = "22.0.0", features = ["testutils"] }
proptest     = { version = "1.4.0", default-features = false, features = ["std"] }
proptest-derive = { version = "0.4.0" }
