[package]
name = "carbon-registry"
version = "0.2.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "22.0"

[dev-dependencies]
soroban-sdk = { version = "22.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
